perf(relation): 优化联系人列表首字母分组逻辑，添加letter字段作为首字母分组key

--- a/internal/relation/api/http/v1/relation.yaml
+++ b/internal/relation/api/http/v1/relation.yaml
@@ -1377,6 +1377,11 @@ components:
         signature:
           type: string
           description: 用户签名
+        letter:
+          type: string
+          description: 首字母key
+          x-omitempty: false
+          x-go-type-skip-optional-pointer: true
         status:
           type: integer
           description: 用户状态
